--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -3,13 +3,18 @@
 
 :root {
     --selected: rgb(255, 86, 5);
-    --header-navbar-padding-top-bottom: 31px;
-    --header-navbar-padding-left-right: 35px;
+    --black: #212121;
+    --white: #fff;
+    --blue: #2f5acf;
     --font-weight-black: 900;
     --font-weight-bold: 700;
     --font-weight-medium: 500;
     --font-weight-normal: 400;
     --font-weight-light: 300;
+    --max-height-modal: 600px;
+    --max-width-modal: 1000px;
+    --medium-height-modal: 560px;
+    --medium-width-modal: 950px;
 }
 
 * {
@@ -25,6 +30,9 @@ body {
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
+    &::-webkit-scrollbar {
+        width: 8px;
+    }
 }
 
 a {
