--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -9,6 +9,6 @@
     justify-content: center;
     align-items: center;
     list-style: none;
-    padding: var(--header-navbar-padding-top-bottom) 16px;
     position: relative;
+    padding: 0px 5px;
 }
